fixed all isuues
