# nodeJS_grocery_APP/Backend/controllers/categories.controller.js
@@ -1,108 +1,74 @@
 const categoriesServices = require('../services/categories.service');
 const upload = require('../middleware/category.uploade');
 
+const handleFileUpload = (req) => {
+    if (!req.file) return null;
+    return req.file.path.replace(/\\/g, "/");
+};
+
 exports.create = (req, res, next) => {
     upload(req, res, function(err) {
-        if(err){
-            next(err);
-        } else {
-            const path = req.file != undefined ? req.file.path.replace(/\\/g, "/") : null;
-            var model = {
-                categoryName : req.body.categoryName,
-                categoryDescription : req.body.categoryDescription,
-                categoryImage : path != "" ? "/" + path : "",
-            };
+        if(err) return next(err);
+        
+        const path = handleFileUpload(req);
+        var model = {
+            category_name: req.body.category_name,
+            category_description: req.body.category_description,
+            category_image: path ? "/" + path : "",
+        };
 
-            categoriesServices.createCategory(model, (err, data) => {
-                if(err) {
-                  return next(err);
-                } else {
-                   return res.status(200).send({
-                    message: 'Category created successfully',
-                    data: data
-                   })
-                }
-            });
-        }
+        categoriesServices.createCategory(model, (err, data) => {
+            if(err) return next(err);
+            return res.status(200).send({ message: 'Category created successfully', data });
+        });
     });
 };
 
 exports.findAll = (req, res, next) => {
     var model = {
-        categoryName: req.query.categoryName,
-        pageSize: req.query.pageSize,
-        page: req.query.page,
+        category_name: req.query.category_name,
+        pageSize: parseInt(req.query.pageSize) || 10,
+        page: parseInt(req.query.page) || 1,
     };
 
     categoriesServices.getCategories(model, (err, results) => {
-        if (err) {
-            return next(err);
-        } else {
-            return res.status(200).send({
-                message: 'Categories retrieved successfully',
-                data: results
-            });
-        }
-    })
+        if (err) return next(err);
+        return res.status(200).send({ message: 'Categories retrieved successfully', data: results });
+    });
 };
 
 exports.findOne = (req, res, next) => {
-    var model = {
-        categoryId: req.params.id,
-    };
+    var model = { categoryID: req.params.id };
 
-    categoriesServices.getCategoryById(model, (err, results) => {
-        if (err) {
-            return next(err);
-        } else {
-            return res.status(200).send({
-                message: 'Categories retrieved successfully',
-                data: results
-            });
-        }
-    })
+    categoriesServices.getCategoryByID(model, (err, results) => {
+        if (err) return next(err);
+        return res.status(200).send({ message: 'Category retrieved successfully', data: results });
+    });
 };
 
 exports.update = (req, res, next) => {
     upload(req, res, function(err) {
-        if(err){
-            next(err);
-        } else {
-            const path = req.file != undefined ? req.file.path.replace(/\\/g, "/") : null;
-            var model = {
-                categoryId: req.params.id,
-                categoryName : req.body.categoryName,
-                categoryDescription : req.body.categoryDescription,
-                categoryImage : path != "" ? "/" + path : "",
-            };
+        if(err) return next(err);
 
-            categoriesServices.updateCategory(model, (err, data) => {
-                if(err) {
-                  return next(err);
-                } else {
-                   return res.status(200).send({
-                    message: 'Category Updated successfully',
-                    data: data
-                   })
-                }
-            });
-        }
+        const path = handleFileUpload(req);
+        var model = {
+            categoryID: req.params.id,
+            category_name: req.body.category_name,
+            category_description: req.body.category_description,
+            category_image: path ? "/" + path : "",
+        };
+
+        categoriesServices.updateCategory(model, (err, data) => {
+            if(err) return next(err);
+            return res.status(200).send({ message: 'Category updated successfully', data });
+        });
     });
 };
 
 exports.delete = (req, res, next) => {
-    var model = {
-        categoryId: req.params.id,
-    };
-
+    var model = { categoryID: req.params.id };
     categoriesServices.deleteCategory(model, (err, results) => {
-        if (err) {
-            return next(err);
-        } else {
-            return res.status(200).send({
-                message: 'Category deleted successfully',
-                data: results
-            });
-        }
-    })
+        if (err) return next(err);
+        return res.status(200).send({ message: 'Category deleted successfully', data: results });
+    });
 };
