# nodeJS_grocery_APP/Backend/models/categoery.model.js
@@ -1,21 +1,20 @@
 const mongoose = require('mongoose');
-const category = mongoose.model(
-    'category',
-    mongoose.Schema({
-        category_name: {
-            type: String,
-            required: true,
-            unique: true,
-        },
-        category_description: {
-            type: String,
-            required: true,
-        },
-        category_image: {
-            type: String,
-            required: true,
-        },
-    }),
-);
 
-module.exports = category;
+const CategorySchema = new mongoose.Schema({
+    category_name: {
+        type: String,
+        required: true,
+        unique: true,
+    },
+    category_description: {
+        type: String,
+        required: true,
+    },
+    category_image: {
+        type: String,
+    },
+});
+
+const Category = mongoose.model('Category', CategorySchema);
+
+module.exports = Category;
