# nodeJS_grocery_APP/Backend/routes/app.routes.js
@@ -3,10 +3,10 @@ const categoryController = require('../controllers/categories.controller');
 const express = require('express');
 const router = express.Router();
 
-router.post('/category', categoryController.create);
-router.get('/category', categoryController.findAll);
-router.get('/category/:id', categoryController.findOne);
-router.put('/category/:id', categoryController.update);
-router.delete('/category/:id', categoryController.delete);
+router.post('/categories', categoryController.create);
+router.get('/categories', categoryController.findAll);
+router.get('/categories/:id', categoryController.findOne);
+router.put('/categories/:id', categoryController.update);
+router.delete('/categories/:id', categoryController.delete);
 
 module.exports = router;
